deny-root-user/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: denyrootuser
  annotations:
    description: Pods with containers that run on root user are denied
spec:
  crd:
    spec:
      names:
        kind: DenyRootUser
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyrootuser

        violation[{"msg": msg, "details": {}}] {
            c := input_containers[_]
            input_allow_root_container(c)
            msg := sprintf("Root container is not allowed: %v", [c.name])
        }
        
        input_allow_root_container(c) {
           c.securityContext.runAsUser == 0
        }
        
        input_allow_root_container(c) {
            c.securityContext.runAsNonRoot == false
        }
        
        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
        
        has_field(object, field) = true {
            object[field]
        }
